--- a/style.css
+++ b/style.css
@@ -10,25 +10,23 @@
   font-style: normal;
   }
 
-html {
-  width: 100vw;
-  height: 100vh;
-  }
 
-body {
+body {width:100%;
+  height:100%;
+  min-width: 500px;
   margin: 0;
   padding: 0;
   background-color:#f8edeb;
   color:#6d6875;
-  text-shadow:2px 2px 1px #b5838d;
+  text-shadow:1.5px 1.5px 2px #b5838d;
   }
 
 
 .main-title{
   transform:rotate(90deg);
-  opacity:.7;
+  opacity:.3;
   position:absolute;
-  right:-45px;
+  right:-35px;
   bottom:55px;
   font-size:1.5em;
   font-family: 'neoclassical', serif;
@@ -42,23 +40,25 @@ a{
 .flex-center{
   display: flex;
   justify-content: center;
-  text-align: center;}
+  text-align: center;
+margin-left: auto;
+margin-right:auto;}
 
 
 
 .h1 {
   font-family: 'neoclassical', serif;
-  margin-right:30px;
   font-size:2.5em;
+  margin-right:30px;
   margin-left:30px;
-  margin-bottom:40px;
+  margin-bottom:20px;
 }
 
 .p-normal {
   font-family: 'neoclassical', serif;
   font-size:1.8em;
-  margin-left:100px;
-  margin-right:100px;
+  margin-left: auto;
+  margin-right:auto;
 }
 
 .p-sm{
@@ -68,7 +68,7 @@ a{
 
 /* Spacers */
 #top-spacer{
-  margin-top:30px;}
+  margin-top:10px;}
 
 
 /* Buttons */
@@ -112,7 +112,7 @@ border:2px solid #e5989b;
 border-bottom:4px solid #fcd5ce;
 border-right:4px solid #fcd5ce;
 border-radius:15px;
-margin-bottom:40px;
+margin-bottom:20px;
 padding:10px 20px;
 width:400px;
 font-size:1.3em;
@@ -122,6 +122,17 @@ font-family:'neoclassical';
 input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  font-family:'neoclassical';
  color:#e5989b
+}
+
+
+ul{width:100%;
+ align-items: center;
+ list-style:none;
+ margin-left:auto;
+margin-right:auto;
+text-align: center;
+justify-content: center;
+padding:0px;
 }
 
 @media (max-width: 768px){
